--- a/config.ini
+++ b/config.ini
@@ -17,8 +17,8 @@ DISC2_LRATE = 1e-4
 SAMPLE_IMG_DIR = /home/ciprian/Checkpoints/
 
 [VALIDATION]
-MODEL_PATH = /home/ciprian/Checkpoints/14-Dec-2020_(00_32_36.020639)/WeightsTransfer/
-MODEL_ID = 14-Dec-2020_(00_32_36.020639)
+MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/Weights/
+MODEL_ID = 05-Jan-2021_(00_57_28.984164)
 BATCH_SIZE = 4
 V_SPLIT = True
 RGB_PATH = ./Train/VIS/*.tiff
@@ -29,7 +29,7 @@ GEN1_UNET = True
 DISP_IMGS = False
 
 [TEST]
-MODEL_PATH = /home/ciprian/Checkpoints/14-Dec-2020_(00_32_36.020639)/WeightsTransfer/
+MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/Weights/
 MODEL_ID = 14-Dec-2020_(00_32_36.020639)
 RGB_PATH = ./Test/VIS/*.png
 IR_PATH = ./Test/IR/*.png
@@ -39,8 +39,8 @@ GEN1_UNET = True
 BATCH_SIZE = 4
 
 [TRANSFER]
-MAIN_PATH = /home/ciprian/Checkpoints/14-Dec-2020_(00_32_36.020639)
-MODEL_ID = 14-Dec-2020_(00_32_36.020639)
+MAIN_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)
+MODEL_ID = 05-Jan-2021_(00_57_28.984164)
 EPOCHS = 20
 BATCH_SIZE = 4
 V_SPLIT = True
