--- a/config.ini
+++ b/config.ini
@@ -21,8 +21,8 @@ MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/Weights/
 MODEL_ID = 05-Jan-2021_(00_57_28.984164)
 BATCH_SIZE = 4
 V_SPLIT = True
-RGB_PATH = ./Train/VIS/*.tiff
-IR_PATH = ./Train/IR/*.tiff
+RGB_PATH = ./Test/VIS/*.png
+IR_PATH = ./Test/IR/*.png
 GEN1_SPECTRAL = False
 GEN2_SPECTRAL = False
 GEN1_UNET = True
