--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ DISC2_LRATE = 1e-4
 SAMPLE_IMG_DIR = /home/ciprian/Checkpoints/
 
 [VALIDATION]
-MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/Weights/
+MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/WeightsTransfer/
 MODEL_ID = 05-Jan-2021_(00_57_28.984164)
 BATCH_SIZE = 4
 V_SPLIT = True
@@ -29,7 +29,7 @@ GEN1_UNET = True
 DISP_IMGS = False
 
 [TEST]
-MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/Weights/
+MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/WeightsTransfer/
 MODEL_ID = 05-Jan-2021_(00_57_28.984164)
 RGB_PATH = ./Test/VIS/*.png
 IR_PATH = ./Test/IR/*.png
