--- a/config.ini
+++ b/config.ini
@@ -55,3 +55,11 @@ GEN1_LRATE = 5e-5
 GEN2_LRATE = 5e-5
 DISC1_LRATE = 1e-4
 DISC2_LRATE = 1e-4
+
+[DEMO]
+IMAGE_PATH_RGB = ./Single_image/rgb_test.png
+SAVE_PATH = ./Single_image/
+MODEL_PATH = ./Sample_model/
+GEN1_SPECTRAL = False
+GEN2_SPECTRAL = False
+GEN1_UNET = True
