--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ BATCH_SIZE = 4
 V_SPLIT = True
 RGB_PATH = ./Train/VIS/*.tiff
 IR_PATH = ./Train/IR/*.tiff
-CHECK_PATH = /home/ciprian/Checkpoints/
+CHECK_PATH = /path/to/Checkpoints/
 GEN1_SPECTRAL = False
 GEN2_SPECTRAL = False
 DISC1_SPECTRAL = True
@@ -14,11 +14,11 @@ GEN1_LRATE = 5e-5
 GEN2_LRATE = 5e-5
 DISC1_LRATE = 1e-4
 DISC2_LRATE = 1e-4
-SAMPLE_IMG_DIR = /home/ciprian/Checkpoints/
+SAMPLE_IMG_DIR = /path/to/Checkpoints/
 
 [VALIDATION]
-MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/WeightsTransfer/
-MODEL_ID = 05-Jan-2021_(00_57_28.984164)
+MODEL_PATH = /path/to/Checkpoints/modelID/WeightsTransfer/
+MODEL_ID = modelID
 BATCH_SIZE = 4
 V_SPLIT = True
 RGB_PATH = ./Test/VIS/*.png
@@ -29,8 +29,8 @@ GEN1_UNET = True
 DISP_IMGS = False
 
 [TEST]
-MODEL_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)/WeightsTransfer/
-MODEL_ID = 05-Jan-2021_(00_57_28.984164)
+MODEL_PATH = /path/to/Checkpoints/modelID/WeightsTransfer/
+MODEL_ID = modelID
 RGB_PATH = ./Train/VIS/*.tiff
 IR_PATH = ./Train/IR/*.tiff
 GEN1_SPECTRAL = False
@@ -39,8 +39,8 @@ GEN1_UNET = True
 BATCH_SIZE = 4
 
 [TRANSFER]
-MAIN_PATH = /home/ciprian/Checkpoints/05-Jan-2021_(00_57_28.984164)
-MODEL_ID = 05-Jan-2021_(00_57_28.984164)
+MAIN_PATH = /path/to/Checkpoints/modelID
+MODEL_ID = modelID
 EPOCHS = 5
 BATCH_SIZE = 4
 V_SPLIT = True
